<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TelaCadastro">
    <Button
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelar"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/salvar"
            app:layout_constraintTop_toBottomOf="@id/adicionar_vacina"
            android:layout_marginEnd="20dp"/>
    <Button
            android:text="@string/salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salvar"
            android:layout_marginLeft="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/cancelar"
            app:layout_constraintTop_toBottomOf="@id/adicionar_vacina"
            android:layout_marginStart="20dp"/>
    <Button
            android:text="@string/adicionar_vacina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adicionar_vacina"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cancelar"
            app:layout_constraintTop_toBottomOf="@id/comboParentesco"

    />
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comboParentesco"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/adicionar_vacina"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
    />
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/add_photo_user"
            android:id="@+id/imageView"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nome"
            tools:ignore="ContentDescription"/>

    <TextView
            android:text="@string/adicionar_foto_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adicionar_foto"
            android:textSize="14sp"
            android:textColor="#000000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintBottom_toTopOf="@id/nome"
    />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            app:layout_constraintBottom_toTopOf="@id/comboParentesco"
            app:layout_constraintTop_toBottomOf="@id/inputIdade"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">


        <TextView
                android:text="@string/sexo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sexo"
                android:textSize="24sp"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/masculino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/Masculino"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/Feminino"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/feminino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/Feminino"
                app:layout_constraintRight_toLeftOf="@id/Masculino"
                app:layout_constraintLeft_toRightOf="@id/sexo"
                android:layout_weight="1"/>
    </RadioGroup>




    <TextView
            android:text="@string/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nome"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintBottom_toTopOf="@id/inputNome"
            />
    <TextView
            android:text="@string/idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idade"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputNome"
            app:layout_constraintBottom_toTopOf="@id/inputIdade"
            />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_idade"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idade"
            app:layout_constraintBottom_toTopOf="@id/radioGroup"
    />

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_nome"
                app:layout_constraintTop_toBottomOf="@id/nome"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/idade"
        />

</androidx.constraintlayout.widget.ConstraintLayout>