...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adicionar_vacina"
            app:layout_constraintRight_toLeftOf="@id/linha_tempo"
            app:layout_constraintBottom_toTopOf="@id/voltar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listaVacinas"
            app:layout_constraintHeight_percent="0.6"

    />

    <Button
            android:text="@string/linha_tempo"
...
